--- a/src/components/style.css
+++ b/src/components/style.css
@@ -58,3 +58,16 @@
   .container .btn:hover {
     background-color: black;
   }
+
+
+.iframecontent{
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
